force-app/main/default/objects/IPIA_Acknowledgement__c/IPIA_Acknowledgement__c.object-meta.xml
<CustomObject>
    <label>IPIA Acknowledgement</label>
    <nameField>
        <label>IPIA Acknowledgement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IPIA Acknowledgements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>