force-app/main/default/objects/IPIA_Acknowledgement__c/fields/MIT_Id__c.field-meta.xml
<CustomField>
    <fullName>MIT_Id__c</fullName>
    <externalId>true</externalId>
    <label>MIT Id</label>
    <length>9</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>