force-app/main/default/objects/IPIA_Acknowledgement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MIT_Id__c</columns>
    <columns>Acknowledged__c</columns>
    <columns>Date_Acknowledged__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>